<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWidth" />

        <EditText
            android:id="@+id/editTextWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="@string/WidthNumber" />

        <TextView
            android:id="@+id/textViewLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textLength" />

        <EditText
            android:id="@+id/editTextLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="@string/LengthNumber" />

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendData"
            android:text="@string/buttonResults" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>